--- a/EmployeeTracker/app/build.gradle
+++ b/EmployeeTracker/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "24.0.0"
     defaultConfig {
-        applicationId "com.daniel.hhp"
+        applicationId "com.daniel.employeetracker"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -25,9 +25,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.google.firebase:firebase-auth:9.8.0'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     testCompile 'junit:junit:4.12'
 }
-apply plugin: 'com.google.gms.google-services'
